// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should call validateProps() with correct parameters via render for p-accordion: propTypes with ValidatorFunctions 1`] = `
{
  "compact": "boolean",
  "heading": "string",
  "open": "boolean",
  "size": "breakpoint",
  "tag": "oneOf",
  "theme": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-banner: propTypes with ValidatorFunctions 1`] = `
{
  "description": "string",
  "dismissButton": "boolean",
  "heading": "string",
  "open": "boolean",
  "persistent": "boolean",
  "state": "oneOf",
  "theme": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-button: propTypes with ValidatorFunctions 1`] = `
{
  "aria": "aria",
  "disabled": "boolean",
  "hideLabel": "breakpoint",
  "icon": "string",
  "iconSource": "string",
  "loading": "boolean",
  "theme": "oneOf",
  "type": "oneOf",
  "variant": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-button-group: propTypes with ValidatorFunctions 1`] = `
{
  "direction": "breakpoint",
}
`;

exports[`should call validateProps() with correct parameters via render for p-button-pure: propTypes with ValidatorFunctions 1`] = `
{
  "active": "boolean",
  "alignLabel": "breakpoint",
  "aria": "aria",
  "disabled": "boolean",
  "hideLabel": "breakpoint",
  "icon": "string",
  "iconSource": "string",
  "loading": "boolean",
  "size": "breakpoint",
  "stretch": "breakpoint",
  "theme": "oneOf",
  "type": "oneOf",
  "weight": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-button-tile: propTypes with ValidatorFunctions 1`] = `
{
  "align": "oneOf",
  "aria": "aria",
  "aspectRatio": "breakpoint",
  "background": "oneOf",
  "compact": "breakpoint",
  "description": "string",
  "disabled": "boolean",
  "gradient": "boolean",
  "icon": "string",
  "iconSource": "string",
  "label": "string",
  "loading": "boolean",
  "size": "breakpoint",
  "type": "oneOf",
  "weight": "breakpoint",
}
`;

exports[`should call validateProps() with correct parameters via render for p-carousel: propTypes with ValidatorFunctions 1`] = `
{
  "activeSlideIndex": "number",
  "alignHeader": "oneOf",
  "description": "string",
  "disablePagination": "breakpoint",
  "heading": "string",
  "intl": "shape",
  "pagination": "breakpoint",
  "rewind": "boolean",
  "skipLinkTarget": "string",
  "slidesPerPage": "oneOf",
  "theme": "oneOf",
  "width": "oneOf",
  "wrapContent": "boolean",
}
`;

exports[`should call validateProps() with correct parameters via render for p-checkbox-wrapper: propTypes with ValidatorFunctions 1`] = `
{
  "hideLabel": "breakpoint",
  "label": "string",
  "loading": "boolean",
  "message": "string",
  "state": "oneOf",
  "theme": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-content-wrapper: propTypes with ValidatorFunctions 1`] = `
{
  "backgroundColor": "oneOf",
  "theme": "oneOf",
  "width": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-crest: propTypes with ValidatorFunctions 1`] = `
{
  "aria": "aria",
  "href": "string",
  "target": "string",
}
`;

exports[`should call validateProps() with correct parameters via render for p-display: propTypes with ValidatorFunctions 1`] = `
{
  "align": "oneOf",
  "color": "oneOf",
  "ellipsis": "boolean",
  "size": "breakpoint",
  "tag": "oneOf",
  "theme": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-divider: propTypes with ValidatorFunctions 1`] = `
{
  "color": "oneOf",
  "direction": "breakpoint",
  "orientation": "breakpoint",
  "theme": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-fieldset: propTypes with ValidatorFunctions 1`] = `
{
  "label": "string",
  "labelSize": "oneOf",
  "message": "string",
  "required": "boolean",
  "state": "oneOf",
  "theme": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-fieldset-wrapper: propTypes with ValidatorFunctions 1`] = `
{
  "label": "string",
  "labelSize": "oneOf",
  "message": "string",
  "required": "boolean",
  "state": "oneOf",
  "theme": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-flex: propTypes with ValidatorFunctions 1`] = `
{
  "alignContent": "breakpoint",
  "alignItems": "breakpoint",
  "direction": "breakpoint",
  "inline": "breakpoint",
  "justifyContent": "breakpoint",
  "wrap": "breakpoint",
}
`;

exports[`should call validateProps() with correct parameters via render for p-flex-item: propTypes with ValidatorFunctions 1`] = `
{
  "alignSelf": "breakpoint",
  "flex": "breakpoint",
  "grow": "breakpoint",
  "offset": "breakpoint",
  "shrink": "breakpoint",
  "width": "breakpoint",
}
`;

exports[`should call validateProps() with correct parameters via render for p-flyout: propTypes with ValidatorFunctions 1`] = `
{
  "aria": "aria",
  "open": "boolean",
  "position": "oneOf",
  "theme": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-grid: propTypes with ValidatorFunctions 1`] = `
{
  "direction": "breakpoint",
  "gutter": "breakpoint",
  "wrap": "breakpoint",
}
`;

exports[`should call validateProps() with correct parameters via render for p-grid-item: propTypes with ValidatorFunctions 1`] = `
{
  "offset": "breakpoint",
  "size": "breakpoint",
}
`;

exports[`should call validateProps() with correct parameters via render for p-heading: propTypes with ValidatorFunctions 1`] = `
{
  "align": "oneOf",
  "color": "oneOf",
  "ellipsis": "boolean",
  "size": "breakpoint",
  "tag": "oneOf",
  "theme": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-headline: propTypes with ValidatorFunctions 1`] = `
{
  "align": "oneOf",
  "color": "oneOf",
  "ellipsis": "boolean",
  "tag": "oneOf",
  "theme": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-icon: propTypes with ValidatorFunctions 1`] = `
{
  "aria": "aria",
  "color": "oneOf",
  "lazy": "boolean",
  "name": "oneOf",
  "size": "oneOf",
  "source": "string",
  "theme": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-inline-notification: propTypes with ValidatorFunctions 1`] = `
{
  "actionIcon": "string",
  "actionLabel": "string",
  "actionLoading": "boolean",
  "description": "string",
  "dismissButton": "boolean",
  "heading": "string",
  "persistent": "boolean",
  "state": "oneOf",
  "theme": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-link: propTypes with ValidatorFunctions 1`] = `
{
  "aria": "aria",
  "download": "string",
  "hideLabel": "breakpoint",
  "href": "string",
  "icon": "string",
  "iconSource": "string",
  "rel": "string",
  "target": "string",
  "theme": "oneOf",
  "variant": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-link-pure: propTypes with ValidatorFunctions 1`] = `
{
  "active": "boolean",
  "alignLabel": "breakpoint",
  "aria": "aria",
  "download": "string",
  "hideLabel": "breakpoint",
  "href": "string",
  "icon": "string",
  "iconSource": "string",
  "rel": "string",
  "size": "breakpoint",
  "stretch": "breakpoint",
  "target": "string",
  "theme": "oneOf",
  "underline": "boolean",
  "weight": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-link-social: propTypes with ValidatorFunctions 1`] = `
{
  "hideLabel": "breakpoint",
  "href": "string",
  "icon": "string",
  "iconSource": "string",
  "rel": "string",
  "target": "string",
  "theme": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-link-tile: propTypes with ValidatorFunctions 1`] = `
{
  "align": "oneOf",
  "aria": "aria",
  "aspectRatio": "breakpoint",
  "background": "oneOf",
  "compact": "breakpoint",
  "description": "string",
  "download": "string",
  "gradient": "boolean",
  "href": "string",
  "label": "string",
  "rel": "string",
  "size": "breakpoint",
  "target": "string",
  "weight": "breakpoint",
}
`;

exports[`should call validateProps() with correct parameters via render for p-link-tile-model-signature: propTypes with ValidatorFunctions 1`] = `
{
  "aspectRatio": "breakpoint",
  "description": "string",
  "heading": "string",
  "headingTag": "oneOf",
  "linkDirection": "breakpoint",
  "model": "oneOf",
  "weight": "breakpoint",
}
`;

exports[`should call validateProps() with correct parameters via render for p-marque: propTypes with ValidatorFunctions 1`] = `
{
  "aria": "aria",
  "href": "string",
  "size": "oneOf",
  "target": "string",
  "trademark": "boolean",
  "variant": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-modal: propTypes with ValidatorFunctions 1`] = `
{
  "aria": "aria",
  "disableBackdropClick": "boolean",
  "disableCloseButton": "boolean",
  "dismissButton": "boolean",
  "fullscreen": "breakpoint",
  "heading": "string",
  "open": "boolean",
}
`;

exports[`should call validateProps() with correct parameters via render for p-model-signature: propTypes with ValidatorFunctions 1`] = `
{
  "color": "oneOf",
  "model": "oneOf",
  "size": "oneOf",
  "theme": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-multi-select: propTypes with ValidatorFunctions 1`] = `
{
  "description": "string",
  "disabled": "boolean",
  "dropdownDirection": "oneOf",
  "hideLabel": "breakpoint",
  "label": "string",
  "message": "string",
  "name": "string",
  "required": "boolean",
  "state": "oneOf",
  "theme": "oneOf",
  "value": "array",
}
`;

exports[`should call validateProps() with correct parameters via render for p-multi-select-option: propTypes with ValidatorFunctions 1`] = `
{
  "disabled": "boolean",
  "value": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-pagination: propTypes with ValidatorFunctions 1`] = `
{
  "activePage": "number",
  "allyLabel": "string",
  "allyLabelNext": "string",
  "allyLabelPage": "string",
  "allyLabelPrev": "string",
  "intl": "shape",
  "itemsPerPage": "number",
  "maxNumberOfPageLinks": "breakpoint",
  "showLastPage": "boolean",
  "theme": "oneOf",
  "totalItemsCount": "number",
}
`;

exports[`should call validateProps() with correct parameters via render for p-popover: propTypes with ValidatorFunctions 1`] = `
{
  "aria": "aria",
  "description": "string",
  "direction": "oneOf",
  "theme": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-radio-button-wrapper: propTypes with ValidatorFunctions 1`] = `
{
  "hideLabel": "breakpoint",
  "label": "string",
  "message": "string",
  "state": "oneOf",
  "theme": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-scroller: propTypes with ValidatorFunctions 1`] = `
{
  "alignScrollIndicator": "oneOf",
  "aria": "aria",
  "gradientColor": "oneOf",
  "gradientColorScheme": "oneOf",
  "scrollIndicatorPosition": "oneOf",
  "scrollToPosition": "shape",
  "scrollbar": "boolean",
  "theme": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-segmented-control: propTypes with ValidatorFunctions 1`] = `
{
  "backgroundColor": "oneOf",
  "columns": "breakpoint",
  "theme": "oneOf",
  "value": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-segmented-control-item: propTypes with ValidatorFunctions 1`] = `
{
  "disabled": "boolean",
  "icon": "string",
  "iconSource": "string",
  "label": "string",
  "value": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-select-wrapper: propTypes with ValidatorFunctions 1`] = `
{
  "description": "string",
  "dropdownDirection": "oneOf",
  "filter": "boolean",
  "hideLabel": "breakpoint",
  "label": "string",
  "message": "string",
  "native": "boolean",
  "state": "oneOf",
  "theme": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-spinner: propTypes with ValidatorFunctions 1`] = `
{
  "aria": "aria",
  "size": "breakpoint",
  "theme": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-stepper-horizontal: propTypes with ValidatorFunctions 1`] = `
{
  "size": "breakpoint",
  "theme": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-stepper-horizontal-item: propTypes with ValidatorFunctions 1`] = `
{
  "disabled": "boolean",
  "state": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-switch: propTypes with ValidatorFunctions 1`] = `
{
  "alignLabel": "breakpoint",
  "checked": "boolean",
  "disabled": "boolean",
  "hideLabel": "breakpoint",
  "loading": "boolean",
  "stretch": "breakpoint",
  "theme": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-table: propTypes with ValidatorFunctions 1`] = `
{
  "caption": "string",
  "theme": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-table-cell: propTypes with ValidatorFunctions 1`] = `
{
  "multiline": "boolean",
}
`;

exports[`should call validateProps() with correct parameters via render for p-table-head-cell: propTypes with ValidatorFunctions 1`] = `
{
  "hideLabel": "breakpoint",
  "multiline": "boolean",
  "sort": "shape",
}
`;

exports[`should call validateProps() with correct parameters via render for p-tabs: propTypes with ValidatorFunctions 1`] = `
{
  "activeTabIndex": "number",
  "gradientColor": "oneOf",
  "gradientColorScheme": "oneOf",
  "size": "breakpoint",
  "theme": "oneOf",
  "weight": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-tabs-bar: propTypes with ValidatorFunctions 1`] = `
{
  "activeTabIndex": "number",
  "gradientColor": "oneOf",
  "gradientColorScheme": "oneOf",
  "size": "breakpoint",
  "theme": "oneOf",
  "weight": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-tabs-item: propTypes with ValidatorFunctions 1`] = `
{
  "label": "string",
}
`;

exports[`should call validateProps() with correct parameters via render for p-tag: propTypes with ValidatorFunctions 1`] = `
{
  "color": "oneOf",
  "icon": "string",
  "iconSource": "string",
  "theme": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-tag-dismissible: propTypes with ValidatorFunctions 1`] = `
{
  "aria": "aria",
  "color": "oneOf",
  "label": "string",
  "theme": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-text: propTypes with ValidatorFunctions 1`] = `
{
  "align": "oneOf",
  "color": "oneOf",
  "ellipsis": "boolean",
  "size": "breakpoint",
  "tag": "oneOf",
  "theme": "oneOf",
  "weight": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-text-field-wrapper: propTypes with ValidatorFunctions 1`] = `
{
  "actionIcon": "oneOf",
  "actionLoading": "boolean",
  "description": "string",
  "hideLabel": "breakpoint",
  "label": "string",
  "message": "string",
  "showCharacterCount": "boolean",
  "showCounter": "boolean",
  "showPasswordToggle": "boolean",
  "state": "oneOf",
  "theme": "oneOf",
  "unit": "string",
  "unitPosition": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-text-list: propTypes with ValidatorFunctions 1`] = `
{
  "listType": "oneOf",
  "orderType": "oneOf",
  "theme": "oneOf",
  "type": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-textarea-wrapper: propTypes with ValidatorFunctions 1`] = `
{
  "description": "string",
  "hideLabel": "breakpoint",
  "label": "string",
  "message": "string",
  "showCharacterCount": "boolean",
  "showCounter": "boolean",
  "state": "oneOf",
  "theme": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-toast: propTypes with ValidatorFunctions 1`] = `
{
  "theme": "oneOf",
}
`;

exports[`should call validateProps() with correct parameters via render for p-wordmark: propTypes with ValidatorFunctions 1`] = `
{
  "aria": "aria",
  "href": "string",
  "size": "oneOf",
  "target": "string",
  "theme": "oneOf",
}
`;
